<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Timelapse</string>
    <string name="label_direct_control">Direct control</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="connect">Connect</string>
    <string name="connecting">Connecting</string>
    <string name="disconnect">Disconnect</string>
    <string name="actions">Actions</string>

    <!-- General control -->
    <string name="center_arm">Center arm</string>
    <string name="shutdown_arm">Shutdown arm</string>
    <string name="tare_arm">Tare position</string>

    <!-- Direct control -->
    <string name="wheels_control">Wheels control</string>
    <string name="arm_control">Arm control</string>
    <string name="left_wheel">Left wheel</string>
    <string name="right_wheel">Right wheel</string>
    <string name="arm_rotation">Arm rotation</string>
    <string name="arm_height">Arm height</string>
    <string name="device_tilt">Device tilt</string>

    <!-- Infuse -->
    <string name="label_infuse">Infuse</string>

    <!-- Camera -->
    <string name="label_camera">Camera</string>
    <string name="toggle_front_camera">Front camera</string>
    <string name="infuse_server">Infuse server</string>
    <string name="forwarded_sensors">Forwarded sensors</string>
</resources>
