<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/wheels_control"
        style="?android:attr/listSeparatorTextViewStyle" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

        <com.backmask.timelapse.view.ServoControlView
            android:id="@+id/left_wheel"
            custom:type="continuous_rotation"
            custom:label="@string/left_wheel" />

        <com.backmask.timelapse.view.ServoControlView
            android:id="@+id/right_wheel"
            custom:type="continuous_rotation"
            custom:label="@string/right_wheel" />
    </TableLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/arm_control"
        style="?android:attr/listSeparatorTextViewStyle" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

        <com.backmask.timelapse.view.ServoControlView
            android:id="@+id/arm_rotation"
            custom:type="regular"
            custom:label="@string/arm_rotation" />
    </TableLayout>

</LinearLayout>